docs/original_moodle/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-10-54-03.ceg/compilation.txt
Grupo.java:30: error: cannot find symbol
    puedeAgregar = false;
    ^
  symbol:   variable puedeAgregar
  location: class Grupo
Grupo.java:33: error: cannot find symbol
    return puedeAgregar;
           ^
  symbol:   variable puedeAgregar
  location: class Grupo
2 errors
Not compiled
